--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <img src="resources\images\frames.jpeg" alt="">
         <h2>Art Frames (assorted)</h2>
-        <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="pricing">Starting at $2.00 / frame.</span></p>
+        <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="pricing">Starting at $2.00 / frame.</span></p>
       </div>
       <div class="paint">
         <div class="title">
